--- a/recipes/chilirick.html
+++ b/recipes/chilirick.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Easy chili recipe for a large number of people.</h1>
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F581002.jpg" alt="Chili Rick's Recipe">
+            <h1>Description</h1>
     </body>
 </html>
