--- a/recipes/chilirick.html
+++ b/recipes/chilirick.html
@@ -5,8 +5,43 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>Easy chili recipe for a large number of people.</h1>
+        <h2>Easy chili recipe for a large number of people.</h2>
             <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F581002.jpg" alt="Chili Rick's Recipe">
-            <h1>Description</h1>
+            <h3>Description</h3>
+                <p>Chili con carne, meaning "chili with meat", 
+                    is a spicy stew containing chili peppers, meat, 
+                    tomatoes and often kidney beans. Other seasonings 
+                    may include garlic, onions, and cumin. The dish 
+                    originated in northern Mexico or southern Texas.</p>
+            <h3>Ingredients</h3>
+                <ul>
+                    <li>2 (29 ounce) cans tomato sauce</li>
+                    <li>2 (28 ounce) cans peeled and diced tomatos</li>
+                    <li>2 cups diced onion</li>
+                    <li>1 tablespoon Italian seasoning</li>
+                    <li>1 pound bacon, diced</li>
+                    <li>2 pounds spicy sausage</li>
+                    <li>3 pounds lean ground beef</li>
+                    <li>1 (32 ounce) bottle hickory smoke bbq sauce</li>
+                    <li>1/2 cup chili powder</li>
+                    <li>4 (15.25 ounce) cans kidney beans, undrained</li>
+                    <li>2 (1 ounce) squares unsweetened chocolate, chopped</li>
+                </ul>
+            <h3>Steps</h3>
+                <ol>
+                    <li>In a large pot or Dutch oven over medium heat, c
+                        ombine tomato sauce, tomatoes, onion and Italian 
+                        seasoning.</li>
+                    <li>In a large skillet over medium heat, cook bacon until 
+                        slightly crisp. Drain and stir into the pot.</li>
+                    <li>In the same skillet over medium heat, cook sausage 
+                        until brown. Drain and stir into the pot.</li>
+                    <li>In the same skillet over medium heat, cook the beef 
+                        until brown. Drain and stir into the pot.</li>
+                    <li>Stir the barbeque sauce and chili powder into the pot; 
+                        taste and adjust seasonings. Stir in the kidney beans 
+                        and chocolate and simmer until flavors are well blended. 
+                        Serve.</li>
+                </ol>
     </body>
 </html>
