Adjusted image size

--- a/recipes/chilirick.html
+++ b/recipes/chilirick.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h2>Easy chili recipe for a large number of people.</h2>
-            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F581002.jpg" alt="Chili Rick's Recipe">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F581002.jpg" width="350" height="350" alt="Chili Rick's Recipe">
             <h3>Description</h3>
                 <p>Chili con carne, meaning "chili with meat", 
                     is a spicy stew containing chili peppers, meat, 
