--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-    </body>
+            <ul>
+            <li><a href="https://www.allrecipes.com/recipe/25687/chili-ricks/">Chili Rick's Recipe</a></li>
+            <li><a href="https://www.allrecipes.com/recipe/21014/good-old-fashioned-pancakes/">Good Old Fashioned Pancakes</a></li>
+            </ul>
+        </body>
 </html>
