--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -6,6 +6,32 @@
     </head>
     <body>
         <h2>Nothing like some good ol' pancakes.</h2>
-        
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2020%2F05%2F07%2FGood-Old-Fashioned-Pancakes-2000.jpg" width="350" height="350" alt="Good Old Fashioned Pancakes">
+            <h3>Description</h3>
+                <p>This is a great recipe that I found in my 
+                    Grandma's recipe book. Judging from the 
+                    weathered look of this recipe card, this was 
+                    a family favorite.</p>
+            <h3>Ingredients</h3>
+                <ul>
+                    <li>1 1/2 cups all-purpose flour</li>
+                    <li>3 1/2 teaspoons baking powder</li>
+                    <li>1/4 teaspoon salt, or more to taste</li>
+                    <li>1 tablespoon white sugar</li>
+                    <li>1 1/4 cups milk</li>
+                    <li>1 egg</li>
+                    <li>3 tablespoons butter, melted</li>
+                </ul>
+            <h3>Directions</h3>
+                <ol>
+                    <li>In a large bowl, sift together the flour, 
+                        baking powder, salt and sugar. Make a well in 
+                        the center and pour in the milk, egg and melted 
+                        butter; mix until smooth.</li>
+                    <li>Heat a lightly oiled griddle or frying pan over 
+                        medium-high heat. Pour or scoop the batter onto 
+                        the griddle, using approximately 1/4 cup for each 
+                        pancake. Brown on both sides and serve hot.</li>
+                </ol>    
     </body>
 </html>
