Added recipe page content

--- a/recipes/hashbrowns.html
+++ b/recipes/hashbrowns.html
@@ -5,6 +5,42 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h2></h2>
+        <h2>These classic diner-style hash browns are crispy on 
+            the outside and fluffy on the inside.</h2>
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2021%2F10%2F27%2FClassic-Hash-Browns-2000.jpg" width="350" height="350" alt="Good old fashioned pancakes">
+            <h3>Description</h3>
+                <p>A pancake is a flat cake, often thin and round, 
+                    prepared from a starch-based batter that may 
+                    contain eggs, milk and butter and cooked on a 
+                    hot surface such as a griddle or frying pan, 
+                    often frying with oil or butter. It is a 
+                    type of batter bread.</p>
+            <h3>Ingredients</h3>
+                <ul>
+                    <li>2 russet potatoes, peeled</li>
+                    <li>3 tablespoons clarified butter</li>
+                    <li>salt and ground black pepper to taste</li>
+                    <li>1 pinch cayenne pepper, or to taste</li>
+                    <li>1 pinch paprika, or to taste</li>
+                </ul>
+            <h3>Directions</h3>
+                <ol>
+                    <li>Shred potatoes into a large bowl filled 
+                        with cold water. Stir until water is 
+                        cloudy, drain, and cover potatoes again 
+                        with fresh cold water. Stir again to 
+                        dissolve excess starch. Drain potatoes 
+                        well, pat dry with paper towels, and 
+                        squeeze out any excess moisture.</li>
+                    <li>Heat clarified butter in a large non-stick 
+                        pan over medium heat. Sprinkle shredded 
+                        potatoes into the hot butter and season with 
+                        salt, black pepper, cayenne pepper, and 
+                        paprika.</li>
+                    <li>Cook potatoes until a brown crust forms on 
+                        the bottom, about 5 minutes. Continue to 
+                        cook and stir until potatoes are browned 
+                        all over, about 5 more minutes.</li>
+                </ol>
     </body>
 </html>
