Added 2 new recipes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <body>
         <h1>Odin Recipes</h1>
             <ul>
-            <li><a href="https://www.allrecipes.com/recipe/25687/chili-ricks/">Chili Rick's Recipe</a></li>
-            <li><a href="https://www.allrecipes.com/recipe/21014/good-old-fashioned-pancakes/">Good Old Fashioned Pancakes</a></li>
+                <li><a href="https://www.allrecipes.com/recipe/25687/chili-ricks/">Chili Rick's Recipe</a></li>
+                <li><a href="https://www.allrecipes.com/recipe/21014/good-old-fashioned-pancakes/">Good Old Fashioned Pancakes</a></li>
+                <li><a href="https://www.allrecipes.com/recipe/220520/classic-hash-browns/">Classic Hash Browns</a></li>
             </ul>
         </body>
 </html>
